# pyStitchClient

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
callback/: index.html
pystitchclient/: settings.py  stitch.py
tests/: test_pystitchclient.py
