[tool.poetry]
name = "pyStitchClient"
version = "0.1.0"
description = ""
authors = ["Yusuf Kaka <yusuf.kaka@mtn.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
requests = "^2.27.1"
PyJWT = "^2.3.0"
cryptography = "^36.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
