[project]
name = "pyStitchClient"
version = "0.1.0"
description = ""
authors = [{ name = "Yusuf Kaka", email = "yusufk@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.9.0,<2.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.27.1",
    "PyJWT>=2.3.0",
    "cryptography>=36.0.2",
]

[project.optional-dependencies]
dev = ["pytest>=5.2"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
